some more edits

--- a/ltx/paper.tex
+++ b/ltx/paper.tex
@@ -37,9 +37,9 @@
 \section{Introduction}
 % % \subsection{Topic Overview and Terminology}
 
-We can define the task of automated detection and tracking of arbitrary objects in videos to be the fulfillment of three actions: differentiating the spatiotemporal regions of a video that constitute objects from the region that constitutes the background (`extraction'), finding the positions and/or shapes of distinct objects (`localization'), and maintaining the positions of the detected objects over time (`tracking'). An ability to carry out these tasks in an automated manner is useful for many disciplines that make use of video data, including the fields of surveillance, autonomous systems, robotics, computational biology, and video summarization. Algorithms of this sort that prove to be efficacious for many videos and a variety of objects are particularly desirable. This paper serves to introduce a new technique involving the application of a dependent Dirichlet processes mixture model, which we hope will provide the foundation for a number of robust, unsupervised algorithms that can detect and track arbitrary objects in a wide range of videos. 
+We can define the task of automated detection and tracking of arbitrary objects in videos to be the fulfillment of three actions: differentiating the spatiotemporal regions of a video that constitute objects from the region that constitutes the background (`extraction'), finding the positions and/or shapes of distinct objects (`localization'), and maintaining the positions of the detected objects over time (`tracking'). An ability to carry out these tasks in an automated manner is useful for many disciplines that make use of video data, including the fields of surveillance, autonomous systems, robotics, computational biology, and video summarization. Algorithms of this sort that prove to be efficacious for many videos and a variety of objects are particularly desirable. This paper serves to introduce a new technique involving the application of a dependent Dirichlet processes mixture model, which we hope will provide the foundation for a number of robust, unsupervised algorithms that can detect and track arbitrary objects in a wide range of videos. \willie{[i like def's in 1st paragraph, but we maybe need a better opening line hook?]}
 
-Research over the past ten years related to the development of methods for general detection and tracking of objects has tended to focus on one of extraction, localization, or tracking; attempts to integrate in the other two and produce a full system able to handle arbitrary objects and videos was often not a primary focus, and was often attempted afterwards, in an ad-hoc manner. Research aimed at developing methods to accomplish the three tasks in a cohesive manner have been pursued more recently to produce algorithms that can, in a fully automated way, accomplish the goal of deciding which spatiotemporal regions of a video constitute distinct objects. A widely applied, though unsophisticated, example is the technique of blob tracking. Blob tracking typically refers to methods that perform extraction and localization of objects at each frame independently--for example, by assuming that object pixels have a different intensity than background pixels, setting a fixed pixel intensity threshold to extract pixel locations, and segmenting the extracted data into `blobs' to accomplish localization. A number of tracking techniques based on finding blobs in consecutive frames of a video with similar appearances have been attempted to maintain the identity of detected blobs over time. The main challenges, however, associated with blob tracking involve the difficulty of segmenting occluded objects in a given frame \cite{zhao2004tracking} and preventing multiple tracked blobs from collapsing onto and tracking a single object \cite{vermaak_2003}. These difficulties stem from the typical blob filter's need to perform detection via segmentation on individual frames and lack of a principled way to perform tracking while resisting the collapse of independent tracks.
+Research in the past ten years involving the development of methods for general detection and tracking of objects has tended to focus on one of either extraction, localization, or tracking; attempts to integrate in the other two and produce a full system able to handle arbitrary objects and videos was often not a primary focus, and was often attempted afterwards, in an ad-hoc manner. Research aimed at developing methods to accomplish the three tasks in a cohesive manner have been pursued more recently to produce algorithms that can, in a fully automated way, accomplish the goal of deciding which spatiotemporal regions of a video constitute distinct objects. A widely applied, though unsophisticated, example is the technique of blob tracking. Blob tracking typically refers to methods that perform extraction and localization of objects at each frame independently--for example, by assuming that object pixels have a different intensity than background pixels, setting a fixed pixel intensity threshold to extract pixel locations, and segmenting the extracted data into `blobs' to accomplish localization. A number of tracking techniques based on finding blobs in consecutive frames of a video with similar appearances have been attempted to maintain the identity of detected blobs over time. The main challenges, however, associated with blob tracking involve the difficulty of segmenting occluded objects in a given frame \cite{zhao2004tracking} and preventing multiple tracked blobs from collapsing onto and tracking a single object \cite{vermaak_2003}. These difficulties stem from the typical blob filter's need to perform detection via segmentation on individual frames and lack of a principled way to perform tracking while resisting the collapse of independent tracks.
 
 %Note that blob tracking carries out the three main tasks described above, so it satisfies the criteria for the type of unsupervised detection and tracking algorithms studied in this work; 
 
